[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
description = "Bindings to Ultralight Framework (Ultralight, AppCore)"
documentation = "https://docs.rs/ul-sys/latest/ul_sys/"
license = "MIT"
name = "ul-sys"
readme = "readme.md"
repository = "https://github.com/psychonautwiki/rust-ul-sys"
version = "1.0.1"
