[package]
name = "ul-sys"
version = "1.1.2"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
description = "Bindings to Ultralight Framework (Ultralight, AppCore)"
documentation = "https://docs.rs/ul-sys/latest/ul_sys/"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/psychonautwiki/rust-ul-sys"
edition = "2018"

[build-dependencies]
bindgen = "0.51.1"
